# insurance-recommendation-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_toolbox_connection.py
app/: __init__.py  agent.py  app_runtime.py  config.py  container.py  session_state.py
app/.adk/: session.db
app/api/: dependencies.py  main.py  run.py  schemas.py  sessions.py  sse.py
app/api/routes/: __init__.py  run.py  sessions.py
app/prompts/: insurance_agent_prompt.txt
app/services/: README.md  __init__.py  agent_run_service.py  readiness_service.py  session_service.py
app/tools/: session_tools.py
db/: adk_sessions.db  insurance.db  schema.sql  seed.sql  tools.yaml
docs/: architecture.md  demo_script.md  embedding.md  fastapi_integration_plan.md  limitations.md  prompt_tool_contract.md  run.flow.md  summary.md
frontend/: package-lock.json
frontend/app/api/agent/run/: route.ts
frontend/app/api/agent/sessions/: route.ts
frontend/app/api/agent/sessions/[sessionId]/: route.ts
frontend/components/: adk-workbench.tsx
tests/: test_cases.md  test_fastapi_api.py  test_result_template.md
tests/evals/: case_09_system_capability.test.json  case_10_no_guarantee.test.json  case_11_rule_explanation.test.json  case_12_product_detail_follow_up.test.json  case_13_no_investment_return.test.json  insurance_core.test.json  insurance_extended.test.json  test_config.json
